# visfem

./: .bumpversion.toml  .dockerignore  .gitignore  .zenodo.json  Dockerfile  LICENSE  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml  mypy.yml  ruff.yml
data/datasets/aneurysm/: aneurysm.json
data/datasets/aneurysm_coils/: aneurysm_coils.json
data/datasets/heart/: LabelIDs.txt  heart.json
data/datasets/heart_ep/: heart_ep.json
data/datasets/heart_iv/: IV.meta.json  heart_iv.json
data/datasets/ircad_kidney/: ircad_kidney.json
data/datasets/ircad_liver/: ircad_liver.json
data/datasets/ircadb/: ircadb.json
data/datasets/liver_vessels/: liver_vessels.json
data/datasets/lobule_convergence/: lobule_convergence.json  lobule_sixth_00000625.meta.json  lobule_sixth_0000125.meta.json  lobule_sixth_000025.meta.json  lobule_sixth_00005.meta.json
data/metadata/: heart.json  heart_ep.json  heart_iv.json  ircadb.json  lobule_convergence.json  lobule_deformation.json  lobule_perfusion.json  tibia_mesh.json  tibia_simulation.json
docs/: CNAME  index.html
exploration/: explore_convergence.py  heart.py  heart_iv.py  ircadb.py  plot_utils.py  simliva.py  simliva_convergence.py  tibia.py
landing/: index.html  landing_preview.webm  style.css
notebooks/: demo.ipynb  visfem.ipynb
release-notes/: 0.0.1.md  0.0.2.md  0.1.0.md
setup/: apps.yaml  requirements.txt
src/scripts/: explore_convergence.py  explore_heart.py  explore_ircadb.py  explore_simliva.py  explore_spp.py  plot_utils.py
src/visfem/: __init__.py  app.py  log.py  main.py  mesh.py  models.py
tests/: test_main.py
(+32 files in other folders)
