[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visfem"
dynamic = ["version"]
description = "VisFEM: Web visualization of FEM models"
readme = "README.md"
requires-python = ">=3.13"
authors = [
	{name="Michelle Elias", email="michelleelias66@gmail.com"},
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
maintainers = [
	{name="Matthias König", email="konigmatt@googlemail.com"}
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
	"modeling",
	"visualization",
	"FEM",
]
dependencies = [
	"rich>=14.2.0",
	"pydantic>=2.12.5",
	"meshio>=5.3.5",
	"pyvista>=0.47.1",
]

[project.optional-dependencies]
dev = [
    "bump-my-version>=1.2.4",
	"ruff>=0.14.0",
	"pre-commit>=4.0.1",
	"mypy>=1.18.2",
    "tox>=4.31.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[project_urls]
Homepage = "https://github.com/matthiaskoenig/visfem"
Repository = "https://github.com/matthiaskoenig/visfem"
Documentation = "https://github.com/matthiaskoenig/visfem"
Issues = "https://github.com/matthiaskoenig/visfem/issues"
Download = "https://pypi.org/project/visfem"

[tool.hatch.version]
path = "./src/visfem/__init__.py"
